Updated chart groups, minor CSS changes.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 *.class
 ourWebapp/.buildpath
 ourWebapp/src/main/webapp/js/Copy of charts.js
+ourWebapp/src/main/webapp/contracte-rambursari.csv
+ourWebapp/src/main/webapp/contracte-rambursari-new_small.csv
+ourWebapp/src/main/webapp/js/Copy (2) of charts.js
+ourWebapp/src/main/webapp/js/Copy (3) of charts.js
+ourWebapp/src/main/webapp/index_backup.html
+ourWebapp/src/main/webapp/js/charts_backup.js
